# calibration

./: .gitignore  README.md  checkherbimage.py  requirements.txt
cameracalibration/: CMakeLists.txt  calibrator_target_generator.cc  camera_calibrator.cc  checkerboard_generator.cc  readme.txt
cameracalibration/python/: camera_calibrator.py
